@startuml
class Prenda {
~ TipoPrenda tipo
~ Material material
~ Color colorPrimario
~ Color colorSecundario
~ Trama trama
~ Integer temperaturaMaximaDeUso
+ Categoria getCategoria()
+ Boolean esUsableEnTemperaturaDe(Integer)
}
class Guardarropa {
~ List<Propuesta> propuestas
~ List<Prenda> prendas
+ List<Prenda> getGuardarropa()
~ List<Propuesta> propuestasAceptadas
+ void agregarPropuesta(Propuesta)
+ void aceptarPropuesta(Propuesta)
+ void rechazarPropuesta(Propuesta)
+ void deshacerPropuesta(Propuesta)
+ void agregarPrenda(Prenda)
+ void sacarPrenda(Prenda)

}

class Usuario {
~List<Guardarropa> guardarropas
+void agregarGuardarropa(Guardarropa)
}

interface Propuesta{
+ void aplicar(Guardarropa)
+ void deshacer(Guardarropa)
}

class Agregar implements Propuesta{
~ Prenda
+ void aplicar(Guardarropa)
+ void deshacer(Guardarropa)
}
class Quitar implements Propuesta{
~ Prenda
+ void aplicar(Guardarropa)
+ void deshacer(Guardarropa)
}
Guardarropa-->"*"Propuesta
Guardarropa-->"*"Prenda
Usuario-->"*"Guardarropa


@enduml